--- a/tweet-tweet/src/app/feed/feed.component.html
+++ b/tweet-tweet/src/app/feed/feed.component.html
@@ -5,38 +5,21 @@
          <div class="clearfix"></div>
           <hr class="margin-bottom-10">
           <ul class="list-group list-group-dividered list-group-full">
-            <li class="list-group-item">
+            <li class="list-group-item" *ngFor="let feed of Feed">
               <div class="media">
                 <div class="media-left">
                   <a class="avatar avatar-online" href="javascript:void(0)">
-                    <img src="../../assets/Images/image.jpeg">
+                    <img src="{{feed.photos}}">
                     <i></i>
                   </a>
                 </div>
                 <div class="media-body">
-                    <small class="text-muted pull-right">Just Now</small>
-                  <h4 class="media-heading">@Anchal Hora</h4>
-                  <div class="content">Every flower paint contrasting colors along the ground and bring joy to many. Their elegance and delicate touches have us all in awe and exhilaration. <a href="https://en.wikipedia.org/wiki/Flower">#flowers</a></div>
+                    <small class="text-muted pull-right" >{{feed.text}}</small>
+                  <h4 class="media-heading">{{feed.title}}</h4>
+                  <span class="text-muted media">{{feed.name}}</span>
+                  <div class="content" >{{feed.description}}</div>
                     <div class="image">
-                        <img src="../../assets/Images/nice.jpg">
-                    </div>
-                </div>
-              </div>
-            </li>
-            <li class="list-group-item">
-              <div class="media">
-                <div class="media-left">
-                  <a class="avatar avatar-busy" href="javascript:void(0)">
-                    <img src="../../assets/Images/myimage.jpg">
-                    <i></i>
-                  </a>
-                </div>
-                <div class="media-body">
-                  <small class="text-muted pull-right">38 minutes ago</small>
-                  <h4 class="media-heading">@Chetna Mongmaw</h4>
-                  <div class="content">Mama was my greatest teacher, a teacher of compassion, love and fearlessness. If love is sweet as a flower, then my mother is that sweet flower of love.</div>
-                    <div class="image">
-                        <img src="../../assets/Images/unnamed.jpg">
+                       <img src="{{feed.newphoto}}">
                     </div>
                 </div>
               </div>
