added buttons for main feed

--- a/tweet-tweet/src/app/app.component.html
+++ b/tweet-tweet/src/app/app.component.html
@@ -3,5 +3,5 @@
 <app-trend></app-trend>
 <side-nav>
 </side-nav> -->
-<!-- <router-outlet></router-outlet> -->
-<app-feed></app-feed>
+<router-outlet></router-outlet>
+<!-- <app-feed></app-feed> -->
