--- a/tweet-tweet/src/app/feed/feed.component.html
+++ b/tweet-tweet/src/app/feed/feed.component.html
@@ -18,9 +18,16 @@
                   <h4 class="media-heading">{{feed.title}}</h4>
                   <span class="text-muted media">{{feed.name}}</span>
                   <div class="content" >{{feed.description}}</div>
-                    <div class="image">
-                       <img src="{{feed.newphoto}}">
-                    </div>
+                  <div class="image">
+                      <img class="content-image" src="{{feed.newphoto}}">
+                  </div>
+                  <div class="icons">
+                    <i class="fa fa-comment"></i>
+                    <i class="fa fa-retweet"></i>
+                    <i class="fa fa-heart"></i>
+                    <i class="fa fa-share-square"></i>
+                  </div>
+
                 </div>
               </div>
             </li>
