twitter myprofile UI completed

--- a/tweet-tweet/src/app/app.component.html
+++ b/tweet-tweet/src/app/app.component.html
@@ -3,5 +3,7 @@
 <app-trend></app-trend>
 <side-nav>
 </side-nav> -->
+<!-- <app-signup></app-signup> -->
 <!-- <router-outlet></router-outlet> -->
-<app-feed></app-feed>
+<!-- <app-feed></app-feed> -->
+<app-myprofile></app-myprofile>
