--- a/tweet-tweet/src/app/sign-up/sign-up.component.css
+++ b/tweet-tweet/src/app/sign-up/sign-up.component.css
@@ -1,6 +1,16 @@
+body{
+    background-color:#A9A9A9;
+}
+
 .card{
     background-color: white;
     border: none;
+}
+
+#myButton{
+    padding: 8px 22px;
+    font-size: 10px;
+    color:white;
 }
 
 .card-title{
@@ -16,7 +26,8 @@
 
 .modal-content{
     max-height: 100vh;
-    
+    max-width: 100vw;
+    border-radius: 12px;
 }
 
 .user-detail{
@@ -27,9 +38,7 @@
 }
 
 .form-control{
-   
     background-color: rgb(245, 248, 250);
-    border-bottom: black;
     border: none ;
     border-bottom: 2px solid darkslategrey;
     box-shadow: none;
@@ -59,9 +68,9 @@ h1{
 h3{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
     color: black;
-    font-size: medium;
+    font-size: small;
     font-weight: normal;
-  margin-top: -3rem;
+  margin-top: -2rem;
 }
 .form{
     max-height: 100px;
@@ -177,8 +186,7 @@ h3{
     font-weight: bolder;
     width: -webkit-fill-available;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
-   margin-top:-1rem;
-   padding: -2rem;
+   margin-top:1rem;
 }
 
 
