Changed text for Welcome Page

--- a/tweet-tweet/src/app/welcome-page/welcome-page.component.html
+++ b/tweet-tweet/src/app/welcome-page/welcome-page.component.html
@@ -14,7 +14,7 @@
         <i class="fa fa-twitter m-0" aria-hidden="true"></i>
         <h1 class=" mt-4">See what's happening in <br> the world right now</h1>
 
-        <h4 class="right-content">Join Twitter today</h4>
+        <h4 class="right-content">Join Twitter today.</h4>
         
         <button class="btn btn-outline-primary text-white text-center mb-2 button-style-signup" [routerLink]="['signup']">
           <b>Sign up</b>
