myprofile UI improved

--- a/tweet-tweet/src/app/myprofile/myprofile.component.css
+++ b/tweet-tweet/src/app/myprofile/myprofile.component.css
@@ -83,6 +83,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
 }
 
+
 .username{
   font-size: small;
   color: var(grey);
@@ -161,8 +162,15 @@
     padding: 8px;
 }
 .followers{
-    font-size: 15px;
-    font-weight: bold;
-    align-items: center;
-   
+  margin-top: 250px;
+  color:gray;
+  font-weight:bold;
+  transition: all .2s ease-out;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.followers:hover{
+  background-color:	#B0E0E6;
+  color:#00BFFF;
 }
