--- a/tweet-tweet/src/app/myprofile/myprofile.component.html
+++ b/tweet-tweet/src/app/myprofile/myprofile.component.html
@@ -35,16 +35,16 @@
   
         <div class="row-bottom">
             <span class="followers">
-              <a href=#>Tweets</a>
+            Tweets
              </span>
             <span class="followers">
-                <a href=#>Tweets & Replies</a>
+             Tweets & Replies
              </span>
              <span class="followers">
-                <a href=#>Media</a>
+              Media
                </span>
             <span class="followers">
-                <a href=#>Likes</a>
+              Likes
             </span>
           </div>
   </div>
