--- a/tweet-tweet/src/app/feed/feed.component.html
+++ b/tweet-tweet/src/app/feed/feed.component.html
@@ -1,4 +1,5 @@
-<div class="container-sm">
+<div class="container">
+<div class="col-md-7">  
             <div class="list-group-item" *ngFor="let feed of Feed">
               <div class="media">
                 <div class="media-left">
@@ -24,4 +25,7 @@
                 </div>
               </div>
             </div>
-        </div>
+          </div>
+          </div>
+        
+        
