--- a/tweet-tweet/src/app/feed/feed.component.css
+++ b/tweet-tweet/src/app/feed/feed.component.css
@@ -90,5 +90,30 @@
     border-radius: 10px;
 }
 
+.icon{
+    position: relative;
+    font-size: medium;
+  padding: 5px 8px;
+  border-radius: 30px;
+  color:gray;
+  font-weight:bold;
+  transition: all .2s ease-out;
+  justify-content: space-evenly;
+}
+
+.icon:hover{
+   background-color:#EAFAF2;
+   color: skyblue;
+}
+.icons{
+    padding-top: 0.5rem;
+    margin: 0 5px 0 0;
+    
+    
+  }
+  
+
+
+
 
 
