--- a/tweet-tweet/src/app/myprofile/myprofile.component.html
+++ b/tweet-tweet/src/app/myprofile/myprofile.component.html
@@ -34,18 +34,18 @@
         </span>
   
         <div class="row-bottom">
-            <span class="followers">
+            <small class="followers">
             Tweets
-             </span>
-            <span class="followers">
+            </small>
+            <small class="followers">
              Tweets & Replies
-             </span>
-             <span class="followers">
+            </small>
+             <small class="followers">
               Media
-               </span>
-            <span class="followers">
+             </small>
+            <small class="followers">
               Likes
-            </span>
+            </small>
           </div>
   </div>
   </div>
