--- a/tweet-tweet/src/app/login-page/login-page.component.css
+++ b/tweet-tweet/src/app/login-page/login-page.component.css
@@ -2,15 +2,10 @@
     background-color: white;
     border: none;
 }
-
-.card-body{
-    padding: 2% 28%;
-}
-
 #myButton{
-    width: 100%;
-    border-radius: 3rem;
-    height: 48px;
+    width: 38vw;
+    border-radius: 4rem;
+    height: 45px;
     text-align: center;
     font-weight: bolder;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
@@ -18,15 +13,19 @@
     background-color: rgb(162,207,254);
     border: none;
     margin-top: 2%;
+    color: white;
+    padding:10px;
 }
 
 .form-control{
-    height: 3rem;
+    height: 2rem;
     background-color: rgb(245, 248, 250);
-    border-bottom: black;
+    border-bottom: skyblue;
     border: none ;
-    border-bottom: 2px solid darkslategrey;
+    border-bottom: 1.5px solid darkslategrey;
     box-shadow: none; 
+    font-size: 18px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
 }
 .form-control:focus {
     border-color:  rgba(29,161,242,1.00);
@@ -47,9 +46,8 @@ h1{
 }
 .card-footer a{
     text-align: center;
-    font-size: medium;
+    font-size: 15px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
-    padding: 4% 1%;
     color: rgba(29,161,242,1.00);
     font-weight: lighter;
     cursor: pointer;
@@ -57,7 +55,12 @@ h1{
 .card-footer{
     display: flex;
     justify-content: center;
-    word-break: keep-all;
+    margin-top: 20px;
+    border: none;
+    color:Blue;
+    background-color: white;
+    font-weight: 700;
+    
 }
 
 #twitter{
@@ -67,10 +70,12 @@ h1{
 
 .image{
     text-align: center;
+    margin-bottom: 25px;
 }
 
 .text{
-    padding: 1% 2%
+    padding: 1% 2%;
+    font-size:15px;
 }
 
 .form-group{
