--- a/tweet-tweet/src/app/login-page/login-page.component.html
+++ b/tweet-tweet/src/app/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="position: relative;">
+<div class="card">
   <!-- <div class="message-parent" *ngIf="message">
     <div class="message" style="position: absolute; top: 0; right: 0; width: 20%; color: #ffffff; background-color: rgb(0, 98, 255); padding: 2rem;">
       {{ message }}
@@ -9,7 +9,7 @@
       <div class="image">
         <i class="fa fa-twitter" id="twitter"></i>
       </div>
-      <h1 class="card-title pb-4">Log in to Twitter</h1>
+      <h1 class="card-title pb-6">Log in to Twitter</h1>
       <div class="message-parent" *ngIf="message">
         <p class="message">
           {{ message }}
@@ -30,10 +30,10 @@
         </div>
         
         <a class="btn btn-primary" id = "myButton" (click)="loginHandler2({email: emailInput.value, password: passwordInput.value})" [style.background-color]="isFilled ? 'rgba(29,161,242,1.00)': 'babyblue'">Log in</a>
-        <span class="card-footer">
-          <a>Forgot Password?</a>
-          <a [routerLink]="['/signup']">Sign up for Twitter</a>
-       </span> 
+        <div class="card-footer">
+          <a>Forgot Password?</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a [routerLink]="['/signup']">. Sign up for Twitter</a>
+        </div> 
       </form>
     </div>
 </div>
