--- a/tweet-tweet/src/app/create-post/create-post.component.css
+++ b/tweet-tweet/src/app/create-post/create-post.component.css
@@ -60,3 +60,48 @@
 .buttons{
     margin-left: 6rem;
 }
+
+li{
+    color: black;
+    font-size: 15px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border-bottom: 0.3rem solid #F5F8FA;
+    border-width: 0.3rem;
+    width: 100%;
+}
+
+li:hover{
+    background-color: #F5F8FA;
+}
+
+.card{
+    position: fixed;
+    left: 19%;
+    top: 25%;
+    width: 28rem;
+    height: 30rem;
+    overflow-y: scroll;
+}
+
+ul{
+    list-style-type: none;
+    padding: 0;
+}
+
+img{
+    height: 30px;
+    width: 30px;
+    object-fit: cover;
+    border-radius: 30px;
+    margin-right: 1.5rem;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.user-name{
+    font-weight: bolder;
+}
+
+.user-handle{
+    font-weight: lighter;
+}
