--- a/tweet-tweet/src/app/sign-up/sign-up.component.html
+++ b/tweet-tweet/src/app/sign-up/sign-up.component.html
@@ -1,6 +1,6 @@
 <body>
 <!-- Modal Step1-->
-<div class="modal" id="signup-modal" [style.display]="isVisible ? 'block' : 'none'">
+<div class="modal" [style.display]="isVisible ? 'block' : 'none'">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
   
