--- a/tweet-tweet/src/app/sign-up/sign-up.component.css
+++ b/tweet-tweet/src/app/sign-up/sign-up.component.css
@@ -9,9 +9,10 @@ body{
 .modal-content{
     border-radius: 12px;
     border:none;
+    padding: 50px;
 }
 .modal-dialog{
-    max-width: 550px;
+    max-width: 580px;
 }
 .header{
     padding: 20px 25px;
