--- a/tweet-tweet/src/app/side-nav/side-nav.component.html
+++ b/tweet-tweet/src/app/side-nav/side-nav.component.html
@@ -10,7 +10,7 @@
         <a mat-list-item class="for-hover"><i class="fa fa-bookmark-o" aria-hidden="true"></i><span>Bookmarks</span></a>
         <a mat-list-item class="for-hover"><i class="fa fa-list-alt" aria-hidden="true"></i><span>Lists</span></a>
         <a mat-list-item class="for-hover" routerLink="/profile"><i class="fa fa-user" aria-hidden="true"></i><span>Profile</span></a>
-        <a mat-list-item class="for-hover"><i class="fa fa-ellipsis-h" aria-hidden="true"></i><span>Logout</span></a>
+        <a mat-list-item class="for-hover"(click)="logout($event)"><i class="fa fa-ellipsis-h" aria-hidden="true"></i><span>Logout</span></a>
       </mat-nav-list>
       <a class="tweet-main-btn btn">Tweet</a>
     </div>
@@ -37,7 +37,7 @@
         <a mat-list-item class="small"><i class="fa fa-bookmark-o icon special" aria-hidden="true"></i></a>
         <a mat-list-item class="small"><i class="fa fa-list-alt icon" aria-hidden="true"></i></a>
         <a mat-list-item class="small"><i class="fa fa-user icon special" aria-hidden="true"></i></a>
-        <a mat-list-item class="small"><i class="fa fa-ellipsis-h icon special" aria-hidden="true"></i></a>
+        <a mat-list-item class="small"(click)="logout()"><i class="fa fa-ellipsis-h icon special" aria-hidden="true"></i></a>
         <a mat-list-item class="small"><i class="fa fa-plus special" aria-hidden="true"></i></a>
       </mat-nav-list>
     </div>
