trends component merged with existing UI

--- a/tweet-tweet/src/app/side-nav/side-nav.component.css
+++ b/tweet-tweet/src/app/side-nav/side-nav.component.css
@@ -64,6 +64,14 @@ i{
 .for-hover:hover i, .for-hover:hover span{
   color: rgba(29,161,242,1.00);
 }
+.colorChange{
+  color: rgba(29,161,242,1.00);
+}
+
+a:focus {
+  color:blue;
+  outline: none;
+}
 
 /*-----------------------------------------------------------------------------------*/
 
