--- a/tweet-tweet/src/app/trends/trends.component.css
+++ b/tweet-tweet/src/app/trends/trends.component.css
@@ -8,9 +8,9 @@
 }
 
 .card{
-    background-color:rgb(240, 240, 240);
+    background-color:rgb(245, 248, 250);
     border-radius: 4%;
-    width: 30vw !important;
+    width: 20vw !important;
     /* margin: auto; */
 }
 
@@ -107,7 +107,7 @@ li :hover{
 } 
   
 .input-icons { 
-    width: 100%; 
+    width: 20vw; 
     margin-bottom: 10px;
     margin-top: 1%;
 } 
@@ -128,13 +128,13 @@ li :hover{
 } 
   
 .input-field { 
-    width: 100%; 
+   
     padding: 10px; 
     padding-left: 45px;
     font-size: 1.5rem;
     background-color:rgb(230, 236, 240);
     border-radius:50px;
-    width: 30vw !important;
+    width: 20vw !important;
     border: none;
 } 
 
