modified profile page and update api

--- a/tweet-tweet/src/app/myprofile/myprofile.component.html
+++ b/tweet-tweet/src/app/myprofile/myprofile.component.html
@@ -1,4 +1,11 @@
-<div class="twitter-card"> 
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-3">
+      <side-nav>
+      </side-nav>
+  </div>
+      <div class="col-md-6">
+    <div class="twitter-card"> 
     <span class="span">Anchal Hora</span>
     <i class="fa fa-arrow-left" id="arrow-left"></i>
     <div class="twitter">
@@ -49,3 +56,10 @@
           </div>
   </div>
   </div>
+  </div>
+  <div class="col-md-3">
+  <app-trends>
+  </app-trends>
+</div>
+</div>
+</div>
