--- a/tweet-tweet/src/app/myprofile/myprofile.component.html
+++ b/tweet-tweet/src/app/myprofile/myprofile.component.html
@@ -3,8 +3,9 @@
     <div class="col-md-3">
       <side-nav>
       </side-nav>
-  </div>
+    </div>
       <div class="col-md-6">
+        
     <div class="twitter-card"> 
     <span class="span">Anchal Hora</span>
     <i class="fa fa-arrow-left" id="arrow-left"></i>
@@ -54,7 +55,9 @@
               Likes
             </small>
           </div>
+          <div class="row-bottom"></div>
   </div>
+  <div class="col-md-12"><app-feed></app-feed></div>
   </div>
   </div>
   <div class="col-md-3">
@@ -63,3 +66,4 @@
 </div>
 </div>
 </div>
+
