--- a/tweet-tweet/src/app/feed/feed.component.css
+++ b/tweet-tweet/src/app/feed/feed.component.css
@@ -1,4 +1,6 @@
-
+.feed{
+    margin-top: 300px;
+}
 
 .avatar {
     position: relative;
@@ -15,7 +17,8 @@
 }
 .media-body{
     margin-top: 30px;
-    max-width: 30vw;
+    max-width: 400vw;
+    padding: 1px 20px;
 }
 
 .avatar img {
@@ -41,8 +44,8 @@
     color: black;
     font-size: 20px;
     padding: 10px;
+    margin-right: 10px;
     font-weight: bolder;
-    margin-right: 100px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif
 }
 .content{
@@ -57,16 +60,15 @@
     position: relative;
     font-size: 16px;
     padding: 10px;
-    margin-left: 70px;
-    margin-top: -50px;
+    margin-top: -30px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
 
 }
 .pull-right{
+ 
     font-size: 14px;
-    position: relative;
-    margin-right: 150px;
-    margin-top: 4%;
+    margin-right: 350px;
+    margin-top: 3%;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
 
 }
@@ -75,8 +77,9 @@
     display: flex;
     flex-direction: row;    
     margin-top: 3%;
-    margin-right: 60px;
+    margin:0 5px 0 0;
     justify-content: space-evenly;
+
     
 }
 
@@ -93,7 +96,6 @@
 .icon{
     position: relative;
     font-size: medium;
-  padding: 5px 8px;
   border-radius: 30px;
   color:gray;
   font-weight:bold;
@@ -107,10 +109,7 @@
    cursor: pointer;
 }
 .icons{
-    padding-top: 0.5rem;
-    margin: 0 5px 0 0;
-    
-    
+    padding-top: 1rem;
   }
   
 
