--- a/tweet-tweet/src/app/feed/feed.component.html
+++ b/tweet-tweet/src/app/feed/feed.component.html
@@ -1,7 +1,5 @@
-<div class="container">
-<div class="col-md-7"> 
-   
-            <div class="list-group-item" *ngFor="let feed of Feed">
+<div class="feed">
+            <div class="item" *ngFor="let feed of Feed">
               <div class="media">
                 <div class="media-left">
                   <a class="avatar avatar-online" href="javascript:void(0)">
@@ -27,6 +25,6 @@
               </div>
             </div>
           </div>
-          </div>
+     
         
         
