--- a/tweet-tweet/src/app/side-nav/side-nav.component.css
+++ b/tweet-tweet/src/app/side-nav/side-nav.component.css
@@ -63,13 +63,16 @@ i{
 .for-hover:hover i, .for-hover:hover span{
   color: rgba(29,161,242,1.00);
 }
-.colorChange{
-  color: rgba(29,161,242,1.00);
-}
 
 a:focus {
   color:blue;
   outline: none;
+}
+.selected{
+ 
+  color: rgba(29,161,242,1.00); 
+ cursor: pointer;
+
 }
 
 /*-----------------------------------------------------------------------------------*/
