--- a/tweet-tweet/src/app/myprofile/myprofile.component.css
+++ b/tweet-tweet/src/app/myprofile/myprofile.component.css
@@ -46,10 +46,10 @@
     position: relative;
     margin-top: 250px;
     font-size: medium;
-  padding: 1px 20px;
+  padding: 0px 20px;
   border-style: solid;
   border-radius: 30px;
-  color:skyblue;
+  color:#38A1F3;
   font-weight:bold;
   transition: all .2s ease-out;
 }
@@ -73,7 +73,7 @@
     font-size: 1.5rem;
     font-weight:lighter;
     position: relative;
-    margin-left: -135px;
+    margin-left:-100px;
 }
 .span{
     margin-left: 30px;
@@ -81,6 +81,11 @@
     color: black;
     font-weight: bolder;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+}
+.span-one{
+  margin-left: 30px;
+  margin-top: -2px;
+  font-size: 12px;
 }
 
 
@@ -142,6 +147,7 @@
   color: var( #0084b4);
   
 }
+
 
 .row-bottom{
   border-top: 1px solid #ccc;
