--- a/tweet-tweet/src/app/myprofile/myprofile.component.html
+++ b/tweet-tweet/src/app/myprofile/myprofile.component.html
@@ -5,10 +5,10 @@
       </side-nav>
     </div>
       <div class="col-md-6">
-        
     <div class="twitter-card"> 
     <span class="span">{{user.name}}</span>
-    <i class="fa fa-arrow-left" id="arrow-left"></i>
+    <div class="fa fa-arrow-left" id="arrow-left"></div>
+    <div class="span-one">{{user.tweetCount}}&nbsp; tweets</div>
     <div class="twitter">
     <div class="row-top">
       <div class="user-wrapper">
@@ -22,7 +22,7 @@
     <div class="row-middle">
       <span class="profile-location">
         <i class="fa fa-map-marker"></i>
-        Delhi, India
+        {{user.location}}
       </span>
       <span class="profile-website">
         <i class="fa fa-link"></i>
@@ -39,6 +39,7 @@
       </span>
     <span class="count">
        <b>{{user.followingCount}}</b> Following
+
         </span>
   
         <div class="row-bottom">
