--- a/tweet-tweet/src/app/feed/feed.component.html
+++ b/tweet-tweet/src/app/feed/feed.component.html
@@ -10,7 +10,7 @@
                   </a>
                 </div>
                 <div class="media-body" >
-                  <div class="text-muted pull-right" >{{feed._id}}{{feed.text}}</div>
+                  <div class="text-muted pull-right" >{{feed.text}}</div>
                   <div class="media-heading">{{feed.title}}</div>
                   <div class="media">{{feed.name}}</div>
                   <div class="content" >{{feed.description}}</div>
