--- a/tweet-tweet/src/app/myprofile/myprofile.component.html
+++ b/tweet-tweet/src/app/myprofile/myprofile.component.html
@@ -14,7 +14,18 @@
       <div class="user-wrapper">
          <span class="user-image"></span>
       </div>
-       <span class="edit">Edit Profile</span>
+       <span class="edit" *ngIf="user?.userhandle === currentUser?.userhandle">Edit Profile</span>
+       <div *ngIf="user?.userhandle !== currentUser?.userhandle">
+        <div *ngIf="!follow">
+          <button class="edit" (click)="handleFollow()">Follow</button>
+        </div>
+        <div *ngIf="follow">
+          <button class="edit" id="unfollow-edit" (click)="handleUnfollow()">
+            <span class="following">Following</span>
+            <span class="unfollow">Unfollow</span>
+          </button>
+        </div>
+      </div>
     </div>
     <div class="user">{{user.name}}</div>
     <div class="username">{{user.userhandle}}</div>
