explore api added

--- a/tweet-tweet/src/app/myprofile/myprofile.component.html
+++ b/tweet-tweet/src/app/myprofile/myprofile.component.html
@@ -14,7 +14,7 @@
       <div class="user-wrapper">
          <span class="user-image"></span>
       </div>
-       <span class="edit">Edit Profile</span>
+       <span class="edit" (click) = "editProfileModal()">Edit Profile</span>
     </div>
     <div class="user">{{user.name}}</div>
     <div class="username">{{user.userhandle}}</div>
