--- a/tweet-tweet/src/app/side-nav/side-nav.component.html
+++ b/tweet-tweet/src/app/side-nav/side-nav.component.html
@@ -29,7 +29,7 @@
           <i class="fa fa-list-alt" aria-hidden="true"></i>
           <span>Lists</span>
         </a>
-        <a mat-list-item class="for-hover"(click)="toggle($event)" routerLink="/profile">
+        <a mat-list-item class="for-hover"(click)="toggle($event)" routerLink="/profile/{{currentUserhandle}}">
           <i class="fa fa-user" aria-hidden="true"></i>
           <span>Profile</span>
         </a>
