--- a/tweet-tweet/src/app/feed/feed.component.css
+++ b/tweet-tweet/src/app/feed/feed.component.css
@@ -29,7 +29,7 @@
     margin-top: 80%;
     width: 100%;
     max-width: 100vw;
-    height: 100%;
+    /* height: 100%; */
     border-radius: 1000px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
@@ -74,7 +74,7 @@
 }
 
 .icons{
-    display: flex;
+     display: flex; 
     flex-direction: row;    
     margin-top: 3%;
     margin:0 5px 0 0;
@@ -92,6 +92,23 @@
     max-width: 45rem;
     border-radius: 10px;
 }
+.show{
+    display:block;
+}
+.icon2{
+    font-size: 2.5rem;
+    color: #00aced;
+    padding: 1rem;
+}
+.tweet{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: white;
+    background-color: #00aced;
+    border-radius: 30px;
+    padding: 1rem 1.5rem 1rem 1.5rem;
+}
 
 .icon{
    
@@ -103,7 +120,24 @@
   transition: all .2s ease-out;
   justify-content: space-evenly;
 }
+ .handler{
+    display:flex;
+    flex-wrap:nowrap;
+     top:-10px;
+} 
+.tweet-area{
+    font-size: 2rem;
+    width: 100%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+    border: none;
+    outline: none;
+    resize: none;
+    color: black;
+}
 
+.tweet-area::placeholder{
+    color: #cdcdcd;
+}
 .icon:hover{
    background-color:#EAFAF2;
     color: skyblue; 
