under Maintainance page completed

--- a/tweet-tweet/src/app/coming-soon/coming-soon.component.html
+++ b/tweet-tweet/src/app/coming-soon/coming-soon.component.html
@@ -1,4 +1,8 @@
 <body class="container-fluid">
+    <div  class="icon">
+        <img src="https://img.icons8.com/color/48/000000/twitter.png"/>
+       <span>  Twitter</span> 
+    </div>
     <div class="error-image">
     <h1>👨‍🔧</h1>
   </div>
@@ -6,5 +10,5 @@
     <h1>We're working on this feature!</h1>
     <h3>We apologize for any inconvenience.</h3>
   </div>
-  <button type="button" routerLink="/home" class="btn btn-light  btn-block">Go Back To Homepage</button>
+  <button type="button" routerLink="/home" class="btn btn-primary">Go Back To Homepage</button>
 </body>
