--- a/tweet-tweet/src/app/coming-soon/coming-soon.component.css
+++ b/tweet-tweet/src/app/coming-soon/coming-soon.component.css
@@ -1,17 +1,20 @@
 body {
-    background: rgb(103, 66, 230);
+    /* background: rgb(103, 66, 230); */
     background-size: cover;
-    background: linear-gradient(
+    background: white;
+    /* background: linear-gradient(
       135deg,
       #007bff 35%,
       #007bff 100%
-    );
+    ); */
     height: 100%;
-    color: white;
+    color: #007bff;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
       sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
   }
-  
+  .icon{
+      font-size: 30px;
+  }
   .error-image {
     max-width: 720px;
     width: 90%;
@@ -35,5 +38,13 @@ body {
     max-width: 560px;
     margin: auto auto 48px;
   }
-
-  
+.btn{
+    border-radius: 2rem;
+    height:5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    position: relative;
+    left:43%;
+    font-size: medium;
+    box-shadow: grey;
+}
