--- a/tweet-tweet/src/app/myprofile/edit-profile/edit-profile.component.css
+++ b/tweet-tweet/src/app/myprofile/edit-profile/edit-profile.component.css
@@ -1,16 +1,15 @@
-body{
-    background-color:#B0B0B0;
-}
 
 .modal-content{
     border-radius: 15px;
     border:none;
+    /* min-width: 600px !important; */
 }
 
 .modal-dialog{
+    border-radius: 15px;
     min-height: 400px;
     min-width: 600px;
-    max-width: 600px;
+    /* max-width: 600px; */
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -197,7 +196,7 @@ body{
 .user-image {
     margin-top: 70px;
     position: absolute;
-    background-image: url("../../assets/Images/my.jpg");
+    background-image: url("../../../assets/Images/my.jpg");
     color: aqua;
     background-position: center;
     background-size: cover;
