Dynamic Feed loading partially done and fixed some bugs

--- a/tweet-tweet/src/app/create-post/create-post.component.css
+++ b/tweet-tweet/src/app/create-post/create-post.component.css
@@ -7,6 +7,15 @@
     border-style: solid;
 }
 
+.input-file{
+    position: fixed;
+    opacity: 0;
+}
+
+.input-file:hover{
+    cursor: pointer;
+}
+
 .user-image{
     height: 5rem;
     width: 5rem;
