--- a/tweet-tweet/src/app/create-post/create-post.component.html
+++ b/tweet-tweet/src/app/create-post/create-post.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="d-flex align-items-center buttons">
-        <input type="file" name="image" ng2FileSelect [uploader] = "uploader">
+        <input type="file" class="input-file" name="image" ng2FileSelect [uploader] = "uploader">
         <a><i class="fa fa-picture-o icon mr-2" aria-hidden="true"></i></a>
         <a><i class="fa fa-tasks icon mr-2" aria-hidden="true"></i></a>
         <a><i class="fa fa-git-square icon special mr-2" aria-hidden="true"></i></a>
