--- a/tweet-tweet/src/app/feed/feed.component.css
+++ b/tweet-tweet/src/app/feed/feed.component.css
@@ -1,123 +1,41 @@
-.feed{
-    margin-top: 260px;
+.img-icon{
+    height: 5rem;
+    width: 5rem;
+    object-fit: cover;
+    border-radius: 30px;
+    margin-right: 1.5rem;
 }
 
-.avatar {
-    position: relative;
-    display: inline-block;
-    width: 40px;
-    white-space: nowrap;
-    border-radius: 1000px;
-    vertical-align: bottom;
-    margin-top: 10px;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    object-fit: cover;
-}
-.media-body{
-    margin-top: 30px;
-    max-width: 400vw;
-    padding: 1px 20px;
+p{
+    color: black;
+    font-size: 1.5rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
 }
 
-.avatar img {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    object-fit: cover;
-    margin-top: 80%;
+i{
+    color: black;
+    font-size: 18px;
+    font-weight: lighter;
+}
+
+span{
+    color: black;
+    font-size: 13px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+    margin-left: 1rem;
+}
+
+img{
+    height: 25rem;
     width: 100%;
-    max-width: 100vw;
-    height: 100%;
-    border-radius: 1000px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-}
-
-.image{
-    max-width: 3rem;
-    max-height: 50rem;
-    border-radius: 10rem;
-    border-radius: 100px;
-}
-.media-heading{
-    color: black;
-    font-size: 20px;
-    padding: 10px;
-    margin-right: 10px;
-    font-weight: bolder;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif
-}
-.content{
-    color: black;
-    font-size: 15px;
-    line-height: -10px;
-    padding: 10px;
-    margin-top: -15px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
-}
-.media{
-    position: relative;
-    font-size: 16px;
-    padding: 10px;
-    margin-top: -30px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
-
-}
-.pull-right{
- 
-    font-size: 14px;
-    margin-right: 350px;
-    margin-top: 3%;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
-
-}
-
-.icons{
-    display: flex;
-    flex-direction: row;    
-    margin-top: 3%;
-    margin:0 5px 0 0;
-    justify-content: space-evenly;
-    padding-top: 1rem;
-    
-}
-
-.content-image{
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     object-fit: cover;
-    max-height: 40rem;
-    max-width: 45rem;
-    border-radius: 10px;
+    margin-right: 0.8rem;
+    margin-bottom: 1.8rem;
 }
 
-.icon{
-   
-    position: relative;
-    font-size: medium;
-  border-radius: 30px;
-  color:gray;
-  font-weight:bold;
-  transition: all .2s ease-out;
-  justify-content: space-evenly;
+.fa:hover{
+    background-color: #F5F8FA;
+    padding: 0.8rem;
+    cursor: pointer;
+    border-radius: 30px;
 }
-
-.icon:hover{
-   background-color:#EAFAF2;
-    color: skyblue; 
-   cursor: pointer;
-}
-
-.selected{
-    background-color:#EAFAF2;
-    color:red; 
-   cursor: pointer;
-}
-  
-
-
-
-
-
