--- a/tweet-tweet/src/app/feed/feed.component.css
+++ b/tweet-tweet/src/app/feed/feed.component.css
@@ -1,7 +1,9 @@
 .feed{
     margin-top: 260px;
 }
-
+.modal-content{
+    border-radius: 1.3rem;
+}
 .avatar {
     position: relative;
     display: inline-block;
@@ -100,6 +102,11 @@
     color: #00aced;
     padding: 1rem;
 }
+.icon2:hover{
+    background-color: #F5F8FA;
+    cursor: pointer;
+    border-radius: 30px;
+}
 .tweet{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
     font-size: 1.5rem;
@@ -138,6 +145,18 @@
 .tweet-area::placeholder{
     color: #cdcdcd;
 }
+.close{
+    color: #00aced; 
+    font-size:2.5rem;
+    margin:0;
+}
+.close:hover{
+    
+    background-color:#ecf7fc;
+    cursor: pointer;
+    border-radius: 50%;
+   
+}
 .icon:hover{
    background-color:#EAFAF2;
     color: skyblue; 
@@ -150,6 +169,9 @@
    cursor: pointer;
 }
   
+.buttons{
+    margin-left: 6rem;
+}
 
 
 
